# fastapi

./: .coverage  .env  Dockerfile  compose.yaml  database.db  entrypoint.sh  pyproject.toml
migrations/: env.py
migrations/versions/: 8bad209ac6c9_create_todos_table.py  fa0823941b44_create_users_table.py
src/seven/: app.py  database.db  database.py  schemas.py  security.py
src/seven/routers/: auth.py  todos.py  users.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todo.py  test_users.py
